# DeskAI

./: .env.example  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .prettierignore  .stylelintrc.json  AGENTS.md  BUSINESS_PLAN.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  TECHNICAL_PLAN.md  blueprint-medical-ai.md  index.html  package-lock.json  package.json
backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/scripts/: seed_dev_data.py  smoke_test.py
backend/src/deskai/: __init__.py  container.py  llm_runner.py
backend/src/deskai/bff/: action_availability.py  response.py
backend/src/deskai/ports/: __init__.py  artifact_repository.py  async_ai_pipeline.py  async_transcription_provider.py  audit_repository.py  auth_provider.py  config_repository.py  connection_repository.py  consultation_repository.py  doctor_repository.py  event_publisher.py  export_generator.py  llm_provider.py  patient_repository.py  (+7 more)
backend/src/deskai_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: conftest.py
backend/tests/integration/: test_dynamodb_consultation_roundtrip.py  test_settings_loading.py
backend/tests/unit/: test_action_availability.py  test_audio_chunk_size_limit.py  test_audit_domain.py  test_auth_entities.py  test_auth_exceptions.py  test_auth_handler.py  test_auth_value_objects.py  test_authenticate_use_case.py  test_bff_response.py  test_bff_router.py  test_bff_router_upgrade.py  test_check_entitlements_use_case.py  test_cognito_provider.py  test_consultation_domain.py  test_consultation_handler.py  test_consultation_lifecycle.py  test_consultation_rules.py  test_consultation_status.py  test_consultation_view.py  test_container.py  test_container_transcription.py  test_container_wiring.py  test_create_consultation_entitlement.py  test_create_consultation_use_case.py  test_create_patient_use_case.py  test_dynamodb_audit_repo.py  test_dynamodb_base_repository.py  test_dynamodb_connection_repo.py  test_dynamodb_consultation_repo.py  test_dynamodb_contract_tests.py  test_dynamodb_doctor_repository.py  test_dynamodb_patient_history_repo.py  test_dynamodb_patient_repo.py  test_dynamodb_session_repo.py  test_end_session_use_case.py  test_entitlement_computation.py  test_evaluator.py  test_eventbridge_publisher.py  test_exporter_lambda_handler.py  test_feature_flag_evaluator.py  (+58 more)
infra/: .env.example  Makefile  README.md  app.py  package-lock.json  package.json  pyproject.toml  requirements-lambda.txt
infra/config/: __init__.py  base.py  dev.py  prod.py
infra/constructs/: tagged_construct.py
infra/deskai_infra.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
infra/lambda_handlers/: __init__.py  bff.py  exporter.py  pipeline.py  websocket.py
infra/scripts/: build_lambda.sh
infra/stacks/: __init__.py  api_stack.py  auth_stack.py  budget_stack.py  cdn_stack.py  compute_stack.py  monitoring_stack.py  orchestration_stack.py  security_stack.py  storage_stack.py
infra/tests/: test_config.py  test_stacks.py
(+366 files in other folders)
