[project]
name = "deskai"
version = "0.1.0"
description = "DeskAI Medical AI Scribe — Backend"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40,<1",
    "boto3>=1.35,<2",
    "aws-lambda-powertools>=3,<4",
    "langchain-openai>=0.3,<1",
    "pydantic>=2,<3",
    "tenacity>=9,<10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6,<7",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "boto3-stubs[dynamodb,s3,secretsmanager,events,cognito-idp]>=1.35,<2",
    "moto[dynamodb,s3,secretsmanager]>=5,<6",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "T20", # flake8-print
]

[tool.ruff.lint.isort]
known-first-party = ["deskai"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["boto3.*", "botocore.*", "moto.*", "aws_lambda_powertools.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
