[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deskai-backend"
version = "0.1.0"
description = "DeskAI backend core and BFF"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aws-lambda-powertools>=2.40.0",
  "boto3>=1.35.0",
  "httpx>=0.27.0",
  "pydantic>=2.9.0",
  "python-jose[cryptography]>=3.3.0",
  "tenacity>=9.0.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.7.0",
  "mypy>=1.11.0",
  "pytest>=8.3.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true
